# 2048-cli

./: .gitignore  CMakeLists.txt  Makefile  conanfile.txt  script.lua
src/: Script.cpp  Script.h  engine.c  engine.cpp  engine.h  gfx.h  gfx_curses.cpp  gfx_terminal.cpp  main.cpp  merge.h  options.c
